# metacto

./: CLAUDE.md  README.md  docker-compose.yml  prompts.txt
backend/: .env.example  .gitignore  Dockerfile  manage.py  pyproject.toml
backend/apps/comments/: apps.py  models.py
backend/apps/comments/api/: serializers.py  urls.py  views.py
backend/apps/comments/application/: __init__.py  ports.py  use_cases.py
backend/apps/comments/domain/: __init__.py  entities.py  errors.py  value_objects.py
backend/apps/comments/infrastructure/: container.py  models.py  repositories.py
backend/apps/comments/migrations/: 0001_initial.py
backend/apps/feature_requests/: apps.py  models.py
backend/apps/feature_requests/api/: serializers.py  serializers_vote.py  stats_views.py  timeline_views.py  urls.py  views.py  vote_views.py
backend/apps/feature_requests/application/: ports.py  stats_use_cases.py  status_use_cases.py  use_cases.py
backend/apps/feature_requests/domain/: entities.py  errors.py  status_change_log.py  transitions.py  value_objects.py  vote.py
backend/apps/feature_requests/infrastructure/: container.py  idempotency.py  models.py  repositories.py  stats_repository.py  vote_repository.py
backend/apps/feature_requests/migrations/: 0001_initial.py
backend/apps/identity/: models.py
backend/apps/identity/api/: permissions.py  serializers.py  throttling.py  urls.py  views.py
backend/apps/identity/application/: __init__.py  ports.py  use_cases.py
backend/apps/identity/domain/: __init__.py  entities.py  errors.py  value_objects.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  test.py
backend/metacto_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: conftest.py
backend/tests/unit/: test_smoke.py
frontend/: .gitignore  (+4 more)
(+69 files in other folders)
