[project]
name = "metacto-backend"
version = "0.1.0"
description = "Feature Voting System backend"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "argon2-cffi>=23.1",
    "django-cors-headers>=4.4",
    "drf-spectacular>=0.27",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "django-redis>=5.4",
    "gunicorn>=23.0",
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "django-stubs[compatible-mypy]>=5.0",
    "djangorestframework-stubs[compatible-mypy]>=3.15",
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "freezegun>=1.5",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = {} }

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations", "build"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "DJ"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S", "E501", "E702"]
"apps/*/management/commands/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true
exclude = ["migrations"]

[tool.django-stubs]
django_settings_module = "config.settings.dev"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=apps --cov-report=term-missing"
markers = [
    "unit: pure logic, no DB or network",
    "integration: hits the real database",
    "e2e: full request/response through the API",
]
